--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="horizontalnav">
             <a href="index.html"><img src='images/arrow_icon.png' /><p>Home</p></a>
             <a href="resume.html"><img src='images/arrow_icon.png' /><p>Resume</p></a>
             <a href="portfolio.html"><img src='images/arrow_icon.png' /><p>Portfolio</p></a>
             <a href="experiments.html"><img src='images/arrow_icon.png' /><p>Experiments</p></a>
             <a href="contact.html"><img src='images/arrow_icon.png' /><p>Contact</p></a>
+        </nav>
+        <nav id="verticalnav">
+            <a href="index.html"><img src='images/arrow_icon.png' /><p>Home</p></a>
+            <a href="resume.html"><img src='images/arrow_icon.png' /><p>Resume</p></a>
+            <a href="portfolio.html"><img src='images/arrow_icon.png' /><p>Portfolio</p></a>
+            <a href="experiments.html"><img src='images/arrow_icon.png' /><p>Experiments</p></a>
+            <a href="contact.html"><img src='images/arrow_icon.png' /><p>Contact</p></a>
+            <a id="navbutton"><img src='images/arrow_icon.png' /><p>Menu</p></a>
         </nav>
         <h1 id="title">Robin VanGilder: Web Design</h1>
     </header>
